BV-841 Added OpenXML document parsing package for spreadsheets. LinqToExcel didn't give me the ability to select which row I wanted to parse. The OpenXML library is good for large excel spreadsheets supposedly (don't know how LinqToExcel fares), although a larger dll, and served my purposes (albeit requiring a bit more code then the other two libraries used). Also added angular and forced the numeric textbox on the Worksheet.cshtml view to default to 1 onblur (the user cannot enter nothing). Right now if the user uploads an excel file with multiple sheets, things are normal, otherwise, the app might blow up.... need to redirect to that worksheet view regardless if there are multiple sheets or not.

--- a/BroadvineOnboard/Views/Departments/Worksheet.cshtml
+++ b/BroadvineOnboard/Views/Departments/Worksheet.cshtml
@@ -5,13 +5,13 @@
 
     IEnumerable<SelectListItem> worksheetNames = ViewBag.WorkSheetNames;
 
-    int rowNumber = 0;
+    //int rowNumber = 0;
 
 }
 
 <h2>Select a Worksheet</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Worksheet", "Departments", FormMethod.Post, htmlAttributes: new { ng_app = "ob", ng_controller = "WorksheetController as vm" }))
 {
     @*<p>
         Your spreadsheet contains more than one worksheet. Please select the worksheet to import from.
@@ -35,10 +35,31 @@
     </div>
     <div class="form-group">
         <label for="worksheet-row">Which row number in this worksheet is the header row?</label>
-        @Html.TextBox("rowNumber", rowNumber, new { id = "worksheet-row", @class = "form-control" })
-        @*<input class="form-control" id="worksheet-row" type="text">*@
+        <br />
+        <input kendo-numeric-text-box k-options="vm.options" k-ng-model="vm.value" ng-blur="vm.onBlur()" id="worksheet-row" name="rowNumber" />
     </div>
     <div>
         <input type="submit" value="Next" class="btn btn-default" style="display: inline-block;" />
     </div>
 }
+
+<script>
+    angular
+        .module("ob", ["kendo.directives"])
+        .controller("WorksheetController", function () {
+            var vm = this;
+            var defaultValue = 1;
+
+            vm.value = defaultValue;
+            vm.options = {
+                min: "1",
+                format: "n0"
+            }
+
+            vm.onBlur = function () {
+                if (vm.value === null) {
+                    vm.value = defaultValue;
+                }
+            }
+        });
+</script>
