--- a/BroadvineOnboard/Views/Shared/_Layout.cshtml
+++ b/BroadvineOnboard/Views/Shared/_Layout.cshtml
@@ -16,9 +16,10 @@
     @Styles.Render("~/Content/css")
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//kendo.cdn.telerik.com/2016.2.714/js/kendo.all.min.js"></script>
-
+    
 </head>
 <body>
     <nav class="navbar navbar-default transparent navbar-static-top" role="navigation" id="navbar-main">
