--- a/BroadvineOnboard/Views/Property/Worksheet.cshtml
+++ b/BroadvineOnboard/Views/Property/Worksheet.cshtml
@@ -1,20 +1,56 @@
 ﻿@model BroadvineOnboard.Models.Property
 
 @{
-    ViewBag.Title = "Select Worksheet";
+    ViewBag.Title = "Additional Information";
 
     IEnumerable<SelectListItem> worksheetNames = ViewBag.WorkSheetNames;
-
 }
 
-<h2>Select a Worksheet</h2>
+<h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Worksheet", "Departments", FormMethod.Post, htmlAttributes: new { ng_app = "ob", ng_controller = "WorksheetController as vm" }))
 {
-    <p>
-        Your spreadsheet contains more than one worksheet. Please select the worksheet to import from.
-    </p>
-
-    @Html.DropDownList("worksheetName", worksheetNames, htmlAttributes: new { @class = "form-control", @style = "display:inline-block;" })
-    <input type="submit" value="Next" class="btn btn-default" style="display:inline-block;"/>
+    if (worksheetNames.Count() > 1)
+    {
+        <div class="form-group">
+            <label for="worksheet-dropdown">Your spreadsheet contains more than one worksheet. Please select the worksheet to import from.</label>
+            @Html.DropDownList("worksheetName", worksheetNames, htmlAttributes: new { id = "worksheet-dropdown", @class = "form-control" })
+        </div>
+    }
+    else
+    {
+        @Html.Hidden("worksheetName", worksheetNames.FirstOrDefault().Value)
+    }
+    <div class="form-group">
+        <label for="worksheet-row">Which row number in this worksheet is the header row?</label>
+        <br />
+        <input kendo-numeric-text-box k-options="vm.options" k-ng-model="vm.value" ng-blur="vm.onBlur()" id="worksheet-row" name="rowNumber" />
+    </div>
+    <div>
+        <input type="submit" value="Next" class="btn btn-default" style="display: inline-block;" />
+    </div>
 }
+
+<script>
+    (function () {
+        angular
+            .module("ob", ["kendo.directives"])
+            .controller("WorksheetController", function () {
+                var vm = this;
+                var defaultValue = 1;
+
+                vm.value = defaultValue;
+                vm.options = {
+                    min: "1",
+                    max: "100",
+                    format: "n0"
+                };
+
+                vm.onBlur = function() {
+                    if (vm.value === null) {
+                        vm.value = defaultValue;
+                    }
+                };
+            });
+    })();
+</script>
