--- a/BroadvineOnboard/Views/Companies/Index.cshtml
+++ b/BroadvineOnboard/Views/Companies/Index.cshtml
@@ -6,70 +6,82 @@
 
 <h2>Company Listing</h2>
 
-<p>
-    @Html.ActionLink("Create New Company", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CompanyCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.State)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PostalCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsManagementCompany)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsOwnerCompany)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm("Index", "Companies", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+   <p class="left">
+        @Html.ActionLink("Create New Company", "Create")
+        &nbsp;or&nbsp;
+        <label for="file" style="display:inline-block;">Upload spreadsheet:</label> &nbsp;
+        <input type="file" name="file" id="file" style="display:inline-block;" />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PostalCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsManagementCompany)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsOwnerCompany)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CompanyID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CompanyID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CompanyID })
-        </td>
-    </tr>
+        <input type="submit" value="Upload" class="btn btn-default" />
+    </p>
+    <p class="right">
+        @ViewBag.Error
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CompanyCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.State)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PostalCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsManagementCompany)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsOwnerCompany)
+            </th>
+            <th></th>
+        </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.State)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PostalCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsManagementCompany)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsOwnerCompany)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CompanyID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.CompanyID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.CompanyID })
+            </td>
+        </tr>
+    }
+
+    </table>
 }
-
-</table>
