--- a/BroadvineOnboard/Views/Companies/Worksheet.cshtml
+++ b/BroadvineOnboard/Views/Companies/Worksheet.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm("Worksheet", "Departments", FormMethod.Post, htmlAttributes: new { ng_app = "ob", ng_controller = "WorksheetController as vm" }))
+@using (Html.BeginForm("Worksheet", "Companies", FormMethod.Post, htmlAttributes: new { ng_app = "ob", ng_controller = "WorksheetController as vm" }))
 {
     if (worksheetNames.Count() > 1)
     {
