--- a/BroadvineOnboard/Views/Areas/Index.cshtml
+++ b/BroadvineOnboard/Views/Areas/Index.cshtml
@@ -6,28 +6,40 @@
 
 <h2>Area Listing</h2>
 
-<p>
-    @Html.ActionLink("Create New Area", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm("Index", "Areas", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <p class="left">
+        @Html.ActionLink("Create New Area", "Create")
+        &nbsp;or&nbsp;
+        <label for="file" style="display:inline-block;">Upload spreadsheet:</label> &nbsp;
+        <input type="file" name="file" id="file" style="display:inline-block;" />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td align="right">
-            @Html.ActionLink("Edit", "Edit", new { id=item.AreaID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AreaID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AreaID })
-        </td>
-    </tr>
+        <input type="submit" value="Upload" class="btn btn-default" />
+    </p>
+    <p class="right">
+        @ViewBag.Error
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th></th>
+        </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td align="right">
+                @Html.ActionLink("Edit", "Edit", new { id = item.AreaID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.AreaID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.AreaID })
+            </td>
+        </tr>
+    }
+
+    </table>
 }
-
-</table>
