--- a/BroadvineOnboard/Views/DepartmentGroups/Index.cshtml
+++ b/BroadvineOnboard/Views/DepartmentGroups/Index.cshtml
@@ -6,34 +6,46 @@
 
 <h2>Department Group Listing</h2>
 
-<p>
-    @Html.ActionLink("Create New Department Group", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.DepartmentGroupCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GroupName)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm("Index", "DepartmentGroups", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <p class="left">
+        @Html.ActionLink("Create New Department Group", "Create")
+        &nbsp;or&nbsp;
+        <label for="file" style="display:inline-block;">Upload spreadsheet:</label> &nbsp;
+        <input type="file" name="file" id="file" style="display:inline-block;" />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.DepartmentGroupCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.GroupName)
-        </td>
-        <td align="right">
-            @Html.ActionLink("Edit", "Edit", new { id=item.DepartmentGroupID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DepartmentGroupID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DepartmentGroupID })
-        </td>
-    </tr>
+        <input type="submit" value="Upload" class="btn btn-default" />
+    </p>
+    <p class="right">
+        @ViewBag.Error
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartmentGroupCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.GroupName)
+            </th>
+            <th></th>
+        </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.DepartmentGroupCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GroupName)
+            </td>
+            <td align="right">
+                @Html.ActionLink("Edit", "Edit", new { id = item.DepartmentGroupID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.DepartmentGroupID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.DepartmentGroupID })
+            </td>
+        </tr>
+    }
+
+    </table>
 }
-
-</table>
