BV-832 Added helper class for posting

--- a/BroadvineOnboard/Views/Property/Index.cshtml
+++ b/BroadvineOnboard/Views/Property/Index.cshtml
@@ -14,7 +14,8 @@
         <label for="file" style="display:inline-block;">Upload spreadsheet:</label> &nbsp;
         <input type="file" name="file" id="file" style="display:inline-block;" />
     
-        <input type="submit" value="Upload" class="btn btn-default" />
+        <input type="submit" value="Upload" name="action:Upload" class="btn btn-default" />
+        <input type="submit" value="Wizard" name="action:Wizard" class="btn btn-default" />
     </p>
     <p class="right">
         @ViewBag.Error
