BV-904  Added jquery.steps.css and main.css style files for the styling of the steps plug-in.

--- a/BroadvineOnboard/Content/styles/Site.css
+++ b/BroadvineOnboard/Content/styles/Site.css
@@ -141,3 +141,13 @@ textarea {
 .is-hidden {
     display: none;
 }
+
+
+/* jQuery Steps Overrides */
+.wizard > .content > .body input {
+    border: none;
+}
+
+.wizard > .content > .body .k-numeric-wrap input {
+    margin-top: -28px;
+}
