--- a/BroadvineOnboard/Views/Shared/_Layout.cshtml
+++ b/BroadvineOnboard/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/bootstrap-bundle.min.js"></script>
     <script src="~/Scripts/kendo-bundle.min.js"></script>*@
 
+    @Styles.Render("~/Content/stepsCss")
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//kendo.cdn.telerik.com/2016.2.714/styles/kendo.common.min.css" />
     <link rel="stylesheet" href="//kendo.cdn.telerik.com/2016.2.714/styles/kendo.bootstrap.min.css" />
@@ -90,6 +91,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
+    <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//kendo.cdn.telerik.com/2016.2.714/js/kendo.all.min.js"></script>
 
