moving wizard out of visual studio so this isn't necessary anymore

--- a/BroadvineOnboard/Views/Property/Index.cshtml
+++ b/BroadvineOnboard/Views/Property/Index.cshtml
@@ -19,7 +19,7 @@
 
     <input type="submit" value="Upload" class="k-button" />
 
-    <button type="button" kendo-button ng-click="popupVm.show()" class="k-button">Wizard</button>
+    @*<button type="button" kendo-button ng-click="popupVm.show()" class="k-button">Wizard</button>*@
 
     <p></p>
 
